<resources>
    <string name="app_name">QCM App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nAnswers All the questions right now !</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="Introduction">Introduction</string>
    <string name="Layouts">Layouts</string>
    <string name="Liste">Liste</string>
    <string name="Intent">Intent</string>
    <string name="Bundle">Bundle</string>
    <string name="Cycle_View">Cycle View</string>
    <string name="Fragments">Fragments</string>
    <string name="Sqlite">Sqlite</string>

</resources>